devcom105: updated application properties for same-site cookie